[package]
name = "todo"
version = "0.1.0"
authors = ["cutsea110 <cutsea110@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = [ "attributes" ] }
futures = "0.3.15"
async-trait = "0.1.50"
anyhow = "1.0.40"

[dependencies.sqlx]
version = "0.5.5"
features = [ "postgres", "runtime-async-std-native-tls" ]

[[bin]]
name = "mock_demo"
path = "src/bin/mock-demo.rs"

[[bin]]
name = "psql_demo"
path = "src/bin/psql-demo.rs"
